        - rewritten how commands work internally
        - a lot of migrations
        - added /worldgendebug command
        - moved some commands around, removed some, added some new nodes to some

    World Generation:
        - added async world generation process
        - added access system from other processes to the current world
        - reworked how data maps of chunks are done

    Fluids:
        - implemented basic fluid API

    Launch options:
        - added options to disable mod loader, data pack loader, and resource pack loader
        - boosted server load cycle even more

    Build System:
        - major fixes to the system


changelog of snapshot 21w04a released on 27.01.2021, targeting 21w03a
    This snapshot broke backwards compatibility, again...
    Namely (the most note-able):
    - item factories
    - crafting recipes
    - behaviour changes of BlockFaceState, for better performance
    - command system
    - inventory system (pushed in direction of container separation)

    Commands:
        - added /blockinfo command giving information about the block currently looking at
        - added /recipeview command for below recipe view
        - /execute has now a registry-like structure for sub-nodes
        - /execute in takes now a dimension name instead of its ID
        - defined /execute var [currently not use-able]

    Rendering:
        - improved block rendering

    Server:
        - improved server separation from client

    Crafting:
        - added a screen system for displaying recipes, with extension point for mods, with plans for features
            like in JEI
        - rewritten base recipe API

    Documentation:
        - fixed documentation generation
        - updated & improved docs

    API:
        - ItemFactory is now also created by FactoryBuilder
        - this is breaking existing code, again...
        - added a new combined factory system using in-memory calculations

    Build System: